--- a/package.json
+++ b/package.json
@@ -1,30 +1,37 @@
 {
+  "name": "fulma-demo",
+  "version": "0.0.1",
+  "description": "Demo for Fulma",
+  "main": "index.js",
+  "repository": "git@github.com:MangelMaxime/fulma-demo.git",
+  "author": "Maxime Mangel",
+  "license": "MIT",
   "private": true,
   "dependencies": {
-    "babel-polyfill": "6.26.0",
-    "babel-runtime": "6.26.0",
-    "react": "16.4.2",
-    "react-bootstrap": "0.32.1",
-    "react-dom": "16.4.2",
-    "remotedev": "0.2.7"
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "bulma": "^0.7.4",
+    "bulma-pageloader": "^2.1.0",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5"
   },
   "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.5",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.7.0",
-    "bulma": "0.7.1",
-    "concurrently": "3.6.1",
-    "css-loader": "1.0.0",
-    "fable-loader": "1.1.6",
-    "fable-utils": "1.0.6",
-    "less": "3.8.0",
-    "less-loader": "4.1.0",
-    "node-sass": "4.9.2",
-    "sass-loader": "7.1.0",
-    "style-loader": "0.21.0",
-    "webpack": "4.16.4",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.5"
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "^5.0.2",
+    "core-js": "^3.0.0",
+    "css-loader": "^2.1.1",
+    "fable-compiler": "^2.3.0",
+    "fable-loader": "^2.1.5",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "remotedev": "^0.2.9",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   }
 }
