--- a/app.json
+++ b/app.json
@@ -4,6 +4,6 @@
     "url" : "heroku/nodejs"
   },
   {
-    "url" : "https://github.com/Nhowka/dotnetcore-buildpack#SAFETEST"
+    "url" : "https://github.com/SAFE-Stack/SAFE-buildpack"
   }]
 }
